--- a/style/form.css
+++ b/style/form.css
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+.form-header-div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .content-div{
   width: 700px;
   background-color: #ffa1b1ef;
@@ -16,11 +22,15 @@
   box-shadow: 2px 2px 3px 1px #1f1f1fb0;
 }
 
+.back-link, .form-title{
+  font-size: 2.2rem;
+  color: #6e0000f3;
+}
+
 .form-title{
   text-align: center;
   font-family: 'Indie Flower', cursive;
-  font-size: 2.2rem;
-  color: #6e0000f3;
+  width: 100%;
 }
 
 #character-form{
